# Robotics_Project

./: README.md
first_project/: CMakeLists.txt  README.md  package.xml
first_project/launch/: first_project.launch.py
first_project/rviz/: first_project.rviz
first_project/src/: odometer.cpp  tf_error.cpp
second_project/: CMakeLists.txt  CODEX_INSTRUCTIONS.md  README.md  package.xml
second_project/config/: nav2_params.yaml  slam_toolbox_mapping.yaml
second_project/csv/: goals.csv
second_project/launch/: empty_stage_test.launch.py  floorplan_no_include.launch.py  floorplan_test.launch.py  mapping.launch.py  navigation.launch.py  stage_test.launch.py
second_project/map/: task1_map.pgm  task1_map.yaml  tiny_stage_map.pgm
second_project/rviz/: mapping.rviz  nav2_config.rviz
second_project/src/: goal_publisher_node.cpp
second_project/world/: empty_test.world  floorplan_no_include.world  floorplan_test.world  scout_mini.world
